welcome.lessons.welcome.loopfor.LoopFor.scala.error
Program:2: error: not found: value n
for (i <-0 to n)
              ^